added shortIntro to news

--- a/src/app/noticia/noticia.component.html
+++ b/src/app/noticia/noticia.component.html
@@ -30,6 +30,12 @@
         </div>
     </div>
 
+    <div fxLayoutAlign="center center" fxLayout="column">
+        <div fxLayoutAlign="center center" fxLayout="column">
+            <p class="add-margin author-text">{{(newsData | async).shortIntro}}</p>
+        </div>
+    </div>
+
     <div class="bottomLine">
 
         <div class="blog-image" fxLayoutAlign="center center" fxLayout="column">
