deployed python courses text updated

--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -37,7 +37,7 @@
                 <mat-card-title><a
                         href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb#scrollTo=4FLV1yxDh9Rh">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                         1 </a></mat-card-title>
-                <mat-card-subtitle>Introducción</mat-card-subtitle>
+                <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE1' | translate }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
                 {{ 'PYTHONCOURSES.CLASSES.C1' | translate }}
@@ -51,7 +51,7 @@
                 <mat-card-title><a
                         href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                         2 </a></mat-card-title>
-                <mat-card-subtitle>Tipos de Datos</mat-card-subtitle>
+                <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE2' | translate }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
                 {{ 'PYTHONCOURSES.CLASSES.C2' | translate }}
@@ -65,7 +65,7 @@
                 <mat-card-title><a
                         href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                         3 </a></mat-card-title>
-                <mat-card-subtitle>Archivos</mat-card-subtitle>
+                <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE3' | translate }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
                 {{ 'PYTHONCOURSES.CLASSES.C3' | translate }}
@@ -79,7 +79,7 @@
                 <mat-card-title><a
                         href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_4_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
                         4 </a></mat-card-title>
-                <mat-card-subtitle>Matplot</mat-card-subtitle>
+                <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE4' | translate }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
                 {{ 'PYTHONCOURSES.CLASSES.C4' | translate }}
