--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -63,11 +63,11 @@
                 <app-team-card type="Education"></app-team-card>
                 <app-team-card type="Education2"></app-team-card>
             </mat-expansion-panel>
-            
+
 
             <br><br>
 
-            
+
             <!-- WIE -->
             <mat-expansion-panel class="mat-elevation-z0">
                 <mat-expansion-panel-header>
@@ -94,12 +94,12 @@
                 <app-team-card type="CS2"></app-team-card>
 
             </mat-expansion-panel>
-            
+
         </mat-accordion>
 
     </mat-tab>
-    <mat-tab label="2019" disabled>
+    <!--<mat-tab label="2019" disabled>
         <br>
         <h5>Equipo de 2019</h5>
-    </mat-tab>
+    </mat-tab>-->
 </mat-tab-group>
