added python sponsor

--- a/src/app/curso-python/curso-python.component.html
+++ b/src/app/curso-python/curso-python.component.html
@@ -34,9 +34,12 @@
             fxFlex.lt-sm="100%">
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title><a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb#scrollTo=4FLV1yxDh9Rh">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                        1 </a></mat-card-title>
+                <mat-card-title>
+                    <!--<a
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_1_Curso_Python.ipynb#scrollTo=4FLV1yxDh9Rh">-->{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                    1
+                    <!--</a>-->
+                </mat-card-title>
                 <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE1' | translate }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
@@ -48,9 +51,12 @@
             fxFlex.lt-sm="100%">
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title><a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                        2 </a></mat-card-title>
+                <mat-card-title>
+                    <!--<a
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_2_Curso_Python.ipynb">-->{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                    2
+                    <!--</a>-->
+                </mat-card-title>
                 <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE2' | translate }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
@@ -62,9 +68,12 @@
             fxFlex.lt-sm="100%">
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title><a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                        3 </a></mat-card-title>
+                <mat-card-title>
+                    <!--<a
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_3_Curso_Python.ipynb">-->{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                    3
+                    <!--</a>-->
+                </mat-card-title>
                 <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE3' | translate }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
@@ -76,9 +85,12 @@
             fxFlex.lt-sm="100%">
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title><a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_4_Curso_Python.ipynb">{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
-                        4 </a></mat-card-title>
+                <mat-card-title>
+                    <!--<a
+                       href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Clase_4_Curso_Python.ipynb">-->{{ 'PYTHONCOURSES.CLASSES.TITLE' | translate }}
+                    4
+                    <!--</a>-->
+                </mat-card-title>
                 <mat-card-subtitle>{{ 'PYTHONCOURSES.CLASSES.DATE4' | translate }}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
@@ -90,9 +102,11 @@
             fxFlex.lt-sm="100%">
             <mat-card-header>
                 <div mat-card-avatar class="example-header-image"></div>
-                <mat-card-title><a
-                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Trabajo_integrador.ipynb">{{ 'PYTHONCOURSES.CLASSES.INTEGRADOR-TITLE' | translate }}
-                    </a></mat-card-title>
+                <mat-card-title>
+                    <!--<a
+                        href="https://colab.research.google.com/github/IEEESBITBA/Curso-Python/blob/master/Trabajo_integrador.ipynb">-->{{ 'PYTHONCOURSES.CLASSES.INTEGRADOR-TITLE' | translate }}
+                    <!-- </a>-->
+                </mat-card-title>
                 <mat-card-subtitle></mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
@@ -114,7 +128,7 @@
             <mat-card-content>
                 <div>
                     {{ 'PYTHONCOURSES.QUESTIONS.TEXT' | translate }}<a
-                        href="https://www.reddit.com/r/CursoDePythonITBA">https://www.reddit.com/r/CursoDePythonITBA</a>
+                        href="https://www.reddit.com/r/CursoDePythonITBA">Curso de Python ITBA - Reddit </a>
 
                 </div>
 
@@ -142,6 +156,20 @@
 
             </mat-card-content>
         </mat-card>
+    </div>
+
+    <div class="bottomLine " style="margin-top: 15px">
+        <h1 class="right">Sponsor</h1>
+        <div class="container">
+            <div class="row" style="margin-top: 2vmin; margin-bottom: 4vmin">
+                <div class="col-sm">
+                    <img src="./../../assets/image/sponsors/innovid.png" height="50vmin" alt="Logo Innovid"
+                        style="position: relative; top: 50%; transform: translateY(-50%);">
+                </div>
+
+            </div>
+
+        </div>
     </div>
 
 </body>
