deployed sponsors page

--- a/src/app/sponsors/sponsors.component.html
+++ b/src/app/sponsors/sponsors.component.html
@@ -28,8 +28,8 @@
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/innovid.png" height="50vmin" alt="Logo Avature"
-                                style="position: relative; top: 50%; transform: translateY(-50%);">
+                            <img src="./../../assets/image/sponsors/innovid_white.png" height="30vmin"
+                                alt="Logo Innovid" style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
                             <img src="./../../assets/image/sponsors/eiwa.png" height="60vmin" alt="Logo Eiwa"
@@ -45,8 +45,8 @@
                 <div class="container">
                     <div class="row" style="margin-top: 2vmin;">
                         <div class="col-sm">
-                            <img src="./../../assets/image/sponsors/innovid.png" height="50vmin" alt="Logo Avature"
-                                style="position: relative; top: 50%; transform: translateY(-50%);">
+                            <img src="./../../assets/image/sponsors/innovid_white.png" height="30vmin"
+                                alt="Logo Avature" style="position: relative; top: 50%; transform: translateY(-50%);">
                         </div>
                         <div class="col-sm">
                             <img src="./../../assets/image/sponsors/eiwa.png" height="60vmin" alt="Logo Eiwa"
