--- a/src/app/forum/forum.component.html
+++ b/src/app/forum/forum.component.html
@@ -2,7 +2,7 @@
 
 <body>
     <iframe id="inlineFrameExample" title="Inline Frame Example" width="100%" height="100%"
-        src="http://curso.whittileaks.com/">
+        src="https://curso.whittileaks.com/">
     </iframe>
 </body>
 
