--- a/src/app/noticia/noticia.component.html
+++ b/src/app/noticia/noticia.component.html
@@ -59,7 +59,7 @@
         </div>
         <!--Emoji Rating-->
         <div style="margin-bottom:20px" class="whitetext-left">¿Qué te pareció la noticia?</div>
-        <div style="margin-bottom:10px" *ngIf="emojisVisible">
+        <div style="margin-bottom:10px">
             <ngx-emoji style="margin-right: 7px" [emoji]="{ id: 'thumbsdown', skin: 3 }" size="40"
                 (emojiClick)="rateNews('one', 0)"></ngx-emoji>
 
@@ -77,7 +77,7 @@
             <ngx-emoji style="margin-right: 7px" [emoji]="{ id: 'heart_eyes', skin: 3 }" size="40"
                 (emojiClick)="rateNews('heart', 4)"></ngx-emoji>
         </div>
-        <mat-chip-list aria-label="Emoji selection" *ngIf="isVisbile">
+        <mat-chip-list aria-label="Emoji selection">
             <mat-chip>
                 {{(newsData | async).ratings[0]}} <ngx-emoji [emoji]="{ id: 'thumbsdown', skin: 3 }" size="15">
                 </ngx-emoji>
