--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -30,7 +30,7 @@
     </div>
   </div>
   <!-- Ieeextreme -->
-  <div class="bottomLine">
+  <!--<div class="bottomLine">
     <div class="card-group" fxLayoutAlign="center center">
       <mdb-card class="maxwidth600">
         <mdb-card-img src="https://i.ibb.co/L549XMk/flyer-ieeextreme-para-campus-v3.jpg" alt="Foto de Curso de Python"></mdb-card-img>
@@ -50,10 +50,10 @@
         </mdb-card-body>
       </mdb-card>
     </div>
-  </div>
+  </div>-->
 
   <!-- Educacion, Competencia, Contacto -->
-  <div *ngIf="false">
+  <div *ngIf="true">
     <div class="bottomLine">
       <div class="card-group">
 
@@ -162,98 +162,98 @@
     </div>
 
   </div>
+  <div *ngIf="false">
+    <!-- Iniciativas -->
+    <div class="bottomLine">
+      <h1 id="iniciativas">{{ 'NAVBAR.INITIATIVES' | translate }}</h1>
+      <div class="card-group">
 
-  <!-- Iniciativas -->
-  <div class="bottomLine">
-    <h1 id="iniciativas">{{ 'NAVBAR.INITIATIVES' | translate }}</h1>
-    <div class="card-group">
+        <!-- WIE -->
+        <mdb-card>
+          <div class="view overlay waves-light" mdbWavesEffect>
+            <mdb-card-img src="./../../assets/image/logos/wie.jpg"></mdb-card-img>
+            <a>
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
 
-      <!-- WIE -->
-      <mdb-card>
-        <div class="view overlay waves-light" mdbWavesEffect>
-          <mdb-card-img src="./../../assets/image/logos/wie.jpg"></mdb-card-img>
-          <a>
-            <div class="mask rgba-white-slight"></div>
-          </a>
-        </div>
+          <mdb-card-body>
 
-        <mdb-card-body>
+            <mdb-card-title>
+              <h4>{{ 'HOME.WIE.TITLE' | translate }}</h4>
+            </mdb-card-title>
 
-          <mdb-card-title>
-            <h4>{{ 'HOME.WIE.TITLE' | translate }}</h4>
-          </mdb-card-title>
+            <hr>
 
-          <hr>
+            <mdb-card-text>{{ 'HOME.WIE.TEXT' | translate }}</mdb-card-text>
 
-          <mdb-card-text>{{ 'HOME.WIE.TEXT' | translate }}</mdb-card-text>
+            <!-- <a class="link-text">
+            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+            </h5>
+          </a> -->
+          </mdb-card-body>
 
-          <!-- <a class="link-text">
-          <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-            <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-          </h5>
-        </a> -->
-        </mdb-card-body>
+        </mdb-card>
 
-      </mdb-card>
+        <!--Club de Programadores-->
+        <mdb-card>
+          <div class="view overlay waves-light" mdbWavesEffect>
+            <mdb-card-img src="https://i.ibb.co/XkZVrrz/progteam.jpg"></mdb-card-img>
+            <a>
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
 
-      <!--Club de Programadores-->
-      <mdb-card>
-        <div class="view overlay waves-light" mdbWavesEffect>
-          <mdb-card-img src="https://i.ibb.co/XkZVrrz/progteam.jpg"></mdb-card-img>
-          <a>
-            <div class="mask rgba-white-slight"></div>
-          </a>
-        </div>
+          <mdb-card-body>
 
-        <mdb-card-body>
+            <mdb-card-title>
+              <h4>{{ 'HOME.PROGCLUB.TITLE' | translate }}</h4>
+            </mdb-card-title>
 
-          <mdb-card-title>
-            <h4>{{ 'HOME.PROGCLUB.TITLE' | translate }}</h4>
-          </mdb-card-title>
+            <hr>
 
-          <hr>
+            <mdb-card-text>{{ 'HOME.PROGCLUB.TEXT' | translate }}</mdb-card-text>
 
-          <mdb-card-text>{{ 'HOME.PROGCLUB.TEXT' | translate }}</mdb-card-text>
+            <!-- <a class="link-text">
+            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+            </h5>
+          </a> -->
+          </mdb-card-body>
 
-          <!-- <a class="link-text">
-          <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-            <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-          </h5>
-        </a> -->
-        </mdb-card-body>
+        </mdb-card>
 
-      </mdb-card>
+        <!--Computer Society-->
+        <mdb-card>
+          <div class="view overlay waves-light" mdbWavesEffect>
+            <mdb-card-img src="https://i.ibb.co/QPcgkLJ/cs.jpg"></mdb-card-img>
+            <a>
+              <div class="mask rgba-white-slight"></div>
+            </a>
+          </div>
 
-      <!--Computer Society-->
-      <mdb-card>
-        <div class="view overlay waves-light" mdbWavesEffect>
-          <mdb-card-img src="https://i.ibb.co/QPcgkLJ/cs.jpg"></mdb-card-img>
-          <a>
-            <div class="mask rgba-white-slight"></div>
-          </a>
-        </div>
+          <mdb-card-body>
 
-        <mdb-card-body>
+            <mdb-card-title>
+              <h4>{{ 'HOME.CS.TITLE' | translate }}</h4>
+            </mdb-card-title>
 
-          <mdb-card-title>
-            <h4>{{ 'HOME.CS.TITLE' | translate }}</h4>
-          </mdb-card-title>
+            <hr>
 
-          <hr>
+            <mdb-card-text>{{ 'HOME.CS.TEXT' | translate }}</mdb-card-text>
 
-          <mdb-card-text>{{ 'HOME.CS.TEXT' | translate }}</mdb-card-text>
+            <!-- <a class="link-text">
+            <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
+              <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
+            </h5>
+          </a> -->
+          </mdb-card-body>
 
-          <!-- <a class="link-text">
-          <h5 class="waves-light" mdbWavesEffect>{{ 'HOME.SEEMORE' | translate }}
-            <mdb-icon fas icon="chevron-right" class="waves-light" mdbWavesEffect></mdb-icon>
-          </h5>
-        </a> -->
-        </mdb-card-body>
+        </mdb-card>
 
-      </mdb-card>
-
+      </div>
     </div>
-
   </div>
 
   <!-- Equipo -->
